[gd_scene load_steps=17 format=3 uid="uid://nbt6trucjojq"]

[ext_resource type="Script" path="res://CameraNode.gd" id="1_e6tko"]
[ext_resource type="Script" path="res://Ground.gd" id="2_awsle"]
[ext_resource type="Texture2D" uid="uid://cjmssfcrvfycj" path="res://wispy-grass-meadow_albedo.png" id="3_72ube"]
[ext_resource type="Script" path="res://Enemy.gd" id="4_shvcp"]
[ext_resource type="Script" path="res://EnemyColider.gd" id="5_5rnmk"]
[ext_resource type="Script" path="res://Player.gd" id="6_564st"]
[ext_resource type="PackedScene" uid="uid://cmrhda4lpqeol" path="res://scenes/stylized_character.tscn" id="7_yu46j"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kbypd"]
sky_top_color = Color(0.384314, 0.454902, 0.54902, 1)
sky_horizon_color = Color(0.646078, 0.655975, 0.670505, 1)
ground_horizon_color = Color(0.646078, 0.655975, 0.670505, 1)

[sub_resource type="Sky" id="Sky_ofk77"]
sky_material = SubResource("ProceduralSkyMaterial_kbypd")

[sub_resource type="Environment" id="Environment_jcbkn"]
background_mode = 2
sky = SubResource("Sky_ofk77")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_jff5m"]
size = Vector3(20, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cwegp"]
albedo_texture = ExtResource("3_72ube")

[sub_resource type="BoxShape3D" id="BoxShape3D_cxbsq"]
size = Vector3(100, 0.002, 100)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0mxr8"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_iufpc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ralve"]

[node name="World" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_energy = 3.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jcbkn")

[node name="Map" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.6205, 0.766764, 0.497438)
size = Vector3(20, 1, 1)

[node name="StaticBody3D" type="StaticBody3D" parent="Map/CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.120973, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Map/CSGBox3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.126164, 0)
shape = SubResource("BoxShape3D_jff5m")

[node name="CameraNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 11.5694, 1)
script = ExtResource("1_e6tko")

[node name="Camera3D" type="Camera3D" parent="CameraNode"]
transform = Transform3D(1, 2.12004e-14, 3.68538e-14, 1.01827e-14, -0.961007, 0.276527, 4.12792e-14, -0.276527, -0.961007, 0, 0, 0)

[node name="Ground" type="StaticBody3D" parent="."]
script = ExtResource("2_awsle")

[node name="CSGBox3D" type="CSGBox3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.001, 0)
use_collision = true
size = Vector3(100, 0.002, 100)
material = SubResource("StandardMaterial3D_cwegp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_cxbsq")

[node name="Enemy" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("4_shvcp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy"]
shape = SubResource("CapsuleShape3D_0mxr8")
script = ExtResource("5_5rnmk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Enemy"]
mesh = SubResource("CapsuleMesh_iufpc")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.210133, 0.91547, -9.62074)
script = ExtResource("6_564st")

[node name="StylizedCharacter" parent="Player" instance=ExtResource("7_yu46j")]

[node name="AACD" type="Timer" parent="Player"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_ralve")

[node name="A1CD" type="Timer" parent="Player"]
wait_time = 5.0

[node name="Channel" type="Timer" parent="Player"]

[connection signal="ability1" from="Ground" to="Player" method="_on_ground_ability_1"]
[connection signal="move" from="Ground" to="Player" method="_on_ground_move"]
[connection signal="attacked" from="Enemy" to="Player" method="_on_enemy_attacked"]
[connection signal="timeout" from="Player/A1CD" to="Player" method="_on_a_1cd_timeout"]
[connection signal="timeout" from="Player/Channel" to="Player" method="_on_channel_timeout"]
